# fastapi-starter

./: README.md  justfile  pyproject.toml
src/: server.py
